--- a/index.html
+++ b/index.html
@@ -2,14 +2,42 @@
 <html lang="en">
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
   </head>
   <body>
     <main>
+      <div id="canvas-container"></div>
+      <section>
+        <div id="select-a-file" class="file has-name">
+          <label class="file-label">
+            <input class="file-input" type="file" name="resume">
+            <span class="file-cta">
+              <span class="file-icon">
+                <i class="fas fa-upload"></i>
+              </span>
+              <span class="file-label">
+                Choose a file…
+              </span>
+            </span>
+            <span class="file-name">
+              No file uploaded
+            </span>
+          </label>
+        </div>
+        <button class="button" id="test">Test</button>
+      </section>
     </main>
+    <script>
+      const CANVAS_DIM = 800;
+      let cells = [];
+    </script>
+    <script src="Rect.js"></script>
+    <script src="Cell.js"></script>
     <script src="colors.js"></script>
+    <script src="index.js"></script>
     <script src="sketch.js"></script>
   </body>
 </html>
