--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
             </span>
           </label>
         </div>
-        <button class="button" id="test">Test</button>
+        <button class="button" id="loadFile">Load Test File</button>
+        <button class="button" id="saveFile">Save Test File</button>
       </section>
     </main>
     <script>
       const CANVAS_DIM = 800;
-      let cells = [];
+      let puzzle = undefined;
     </script>
     <script src="Rect.js"></script>
     <script src="Cell.js"></script>
+    <script src="Puzzle.js"></script>
     <script src="colors.js"></script>
     <script src="index.js"></script>
     <script src="sketch.js"></script>
